# EDUpiont

./: .gitignore  README.md  asset-manifest.json  index.html  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
edupoint-frontend/: .eslintrc.json  .prettierrc  README.md  package-lock.json  package.json  tsconfig.json
edupoint-frontend/public/: index.html
edupoint-frontend/src/: App.tsx  index.tsx
edupoint-frontend/src/components/: Dashboard.tsx  (+5 more)
lead_server/: pyproject.toml  set_up.sh
lead_server/lead_server/: main.py  set_up_db.py
lead_server/lead_server/models/: __init__.py  user.py
lead_server/lead_server/models/calendar_models/: calendar_event.py
lead_server/lead_server/models/flashcard_models/: flashcard.py  flashcard_deck.py
lead_server/lead_server/models/note_models/: flashcard.py  note.py
lead_server/lead_server/models/quiz_models/: answer.py  attempt.py  question.py  quiz.py
lead_server/lead_server/routes/: attempt_router.py  auth_router.py  calendar_router.py  flashcard_router.py  main.py  note_router.py  quiz_router.py  user_router.py
lead_server/lead_server/services/: database_service.py
lead_server/lead_server/util/: __init__.py  authenticator.py
lead_server/tests/: attempt_test.http  event_test.http  flashcard_test.http  note_test.http  quiz_test.http  user_test.http
mailing_service/mailing_service/: main.py
scripts/: set_up_database.sh  set_up_frontend.sh  set_up_init.sh  set_up_monorepo.sh
static/js/: main.86e0ee02.js  main.86e0ee02.js.map  main.e60291d9.js  main.e60291d9.js.map
(+31 files in other folders)
