[tool.poetry]
name = "lead-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.4"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
psycopg = "^3.2.2"
psycopg-binary = "^3.2.2"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
